<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 Felix Bechstein -->
<!--
		This file is part of NfcProfile. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="name">Name</string>
    <string name="behavior">Behavior</string>
    <string name="reset">Reset</string>
    <string name="reset_on_second_touch">Reset on second touch.</string>
    <string name="vibrate">Vibrate</string>
    <string name="vibrate_on_profile_switch">Vibrate on profile switch.</string>
    <string name="profiles">Profiles</string>
    <string name="add_profile">Add profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="write_tag">Write NFC tag</string>
    <string name="writing">Writing NFC tag ...</string>
    <string name="tag_written">NFC tag written</string>
    <string name="error_writing_tag">Error writing NFC tag</string>
    <string name="turn_on_nfc">Turn on NFC in your system settings</string>
    <string name="touch_tag">Touch a NFC tag to write profile</string>
    <string name="android_40_bug">Please note: Android 4.0 - 4.0.2 is unable to write unformatted NFC tags.</string>
    <string name="unknown_profile">Unknown profile</string>
    <string name="unknown_profile_hint">Set profile here to use it.</string>
    <string name="new_profile">New Profile</string>
    <string name="device">Device</string>
    <string name="aitplanemode_settings">Airplane mode</string>
    <string name="screen_timeout_settings">Screen timeout</string>
    <string name="screen_brigthmess_settings">Screen brightness</string>
    <string name="sound">Sound</string>
    <string name="ringtone_settings">Ringtone</string>
    <string name="vibrator_settings_ringtone">Vibrator (Ringtone)</string>
    <string name="vibrator_settings_notification">Vibrator (Notification)</string>
    <string name="ringtone">Ringtone</string>
    <string name="set_ringtone_volume">Set ringtone volume</string>
    <string name="ringtone_volume">Ringtone volume</string>
    <string name="about">About</string>
    <string name="version_">Version</string>
    <string name="license_">License</string>
    <string name="author_">Author</string>
    <string name="website_">Website</string>
    <string name="source_code_">Source code</string>
    <string name="more_apps">More apps</string>
    <string name="more_apps_hint">More apps from this author.</string>
    <string name="activate_profile">Activate profile</string>
    <string name="deactivate_profile">Deactivate profile</string>
    <string name="active">Active</string>
    <string name="share">Share</string>

    <string-array name="onoff_settings">
        <item>Keep unchanged</item>
        <item>On</item>
        <item>Off</item>
    </string-array>
    <string-array name="vibrator_settings">
        <item>Keep unchanged</item>
        <item>On</item>
        <item>Off</item>
        <item>Vibrate when silent</item>
    </string-array>
    <string-array name="screentimeout_settings">
        <item>Keep unchanged</item>
        <item>10 Seconds</item>
        <item>30 Seconds</item>
        <item>60 Seconds</item>
        <item>90 Seconds</item>
        <item>2 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>Keep on</item>
    </string-array>
    <string-array name="screenbrightness_settings">
        <item>Keep unchanged</item>
        <item>Automatic</item>
        <item>0%</item>
        <item>10%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
        <item>60%</item>
        <item>70%</item>
        <item>80%</item>
        <item>90%</item>
        <item>100%</item>
    </string-array>

</resources>