<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 Felix Bechstein -->
<!--
		This file is part of NfcProfile. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/turn_on_nfc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/turn_on_nfc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/touch_tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/turn_on_nfc"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/touch_tag"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/android_40_bug"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/touch_tag"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/android_40_bug"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>